--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -312,7 +312,7 @@ footer {
     margin: auto;
     border-left: 1px #000 solid;
     border-right: #000 1px solid;
-    height: 100vh;
+    height: 65vh;
     background-image: url('../images/footer-zemin.png');
     background-position: bottom center;
     background-repeat: no-repeat;
